overflow fixes

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,6 +14,7 @@ body {
 	font-size: 14px;
 	line-height: 19px;
 	margin: 10vh 0;
+	overflow-y: hidden;
 }
 
 a {
