--- a/src/styles/posts.css
+++ b/src/styles/posts.css
@@ -4,6 +4,9 @@
 	line-height: 1.5;
 	max-width: 50vw;
 	margin: 0 auto;
+	max-height: 70vh;
+	overflow-y: scroll;
+	padding-bottom: 2vh;
 }
 
 .postMain > .postTitle {
